--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Surya Mattu Portfolio
+title:       Surya Mattu
 email:       your_email@example.com
 author:      Surya Mattu
 description: "Portfolio Site"
