--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:       Surya Mattu
-email:       your_email@example.com
+email:       surya@suryamattu.com
 author:      Surya Mattu
 description: "Portfolio Site"
 baseurl:     ""
